# xtafkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  install.sh  setup.sh
.agent/: agent.sh
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: release.yml
fatxlib/: Cargo.toml  build.rs
fatxlib/data/: xbox360_titles.json  xbox_originals.tsv
fatxlib/examples/: check_profile.rs  iso2god.rs  list_xiso.rs
fatxlib/src/: content_types.rs  display.rs  lib.rs  partition.rs  stfs.rs  volume.rs  xuids.rs
fatxlib/src/executable/: mod.rs  xbe.rs  xex.rs
fatxlib/src/iso/: compact.rs  manifest.rs  mod.rs  policy.rs
fatxlib/src/iso/god/: con_header.rs  convert.rs  core.rs  hash_list.rs  mod.rs  prepare.rs  sink_fatx.rs  sink_host.rs
fatxlib/src/iso2god/: convert.rs  mod.rs
fatxlib/src/iso2god/god/: con_header.rs
fatxlib/src/stfs/: block_translator.rs  extract.rs  file_entry.rs  header.rs  mod.rs  volume_descriptor.rs
fatxlib/src/stfs/extract/: core.rs  mod.rs  sink_fatx.rs  sink_host.rs
fatxlib/src/titles/: dynamic.rs  file_cache.rs  mod.rs  user_cache.rs
fatxlib/src/xiso/: mod.rs
fatxlib/src/xuids/: account.rs  mod.rs  profile_cache.rs
fatxlib/tests/: TESTING.md  folder_display.rs  integration.rs  iso2god_roundtrip.rs  optimization.rs  roundtrip.rs  stfs_extract_to_fatx.rs  stfs_parser.rs  title_lookup.rs  xiso_reader.rs
fatxlib/tests/common/: mod.rs
fatxlib/tests/fixtures/: tiny.xiso
src/: extract_stfs.rs  main.rs  mkimage.rs  tui.rs
src/mount/: mod.rs
tests/: cli_integration.rs
