[package]
name = "fatx-cli"
version = "0.3.0"
edition = "2021"
description = "CLI tool for interacting with Xbox FATX file systems"
license = "Apache-2.0"
repository = "https://github.com/joshuareisbord/fatx-rs"

[[bin]]
name = "fatx"
path = "src/main.rs"

[dependencies]
fatxlib = { path = "fatxlib" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
hex = "0.4"
chrono = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
rand = "0.8"
nfsserve = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
parking_lot = "0.12"
quick_cache = "0.6"
bytes = "1"
ctrlc = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
io-kit-sys = "0.5"
mach2 = "0.6"

[dev-dependencies]
tempfile = "3"

[workspace]
members = [".", "fatxlib"]
