[package]
name = "xtafkit"
version = "1.3.0"
edition = "2024"
description = "Mac-native TUI workbench for Xbox 360 FATX/XTAF drives — browse, transfer, resolve titles, decode profiles"
license = "Apache-2.0"
repository = "https://github.com/rdmrocha/xtafkit"

[[bin]]
name = "xtafkit"
path = "src/main.rs"

[dependencies]
fatxlib = { path = "fatxlib" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
hex = "0.4"
chrono = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
rand = "0.10"

[dev-dependencies]
tempfile = "3"

[workspace]
members = [".", "fatxlib"]
