[package]
name = "fatxlib"
version = "0.3.0"
edition = "2021"
description = "A Rust library for reading and writing Xbox FATX file systems"
license = "Apache-2.0"
repository = "https://github.com/joshuareisbord/fatx-rs"
build = "build.rs"

[dependencies]
thiserror = "2"
bitflags = "2"
time = "0.3"
log = "0.4"
libc = "0.2"
phf = "0.11"
hmac = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["fs", "ioctl"] }

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
