[package]
name = "fatxlib"
version = "1.3.0"
edition = "2024"
description = "A Rust library for reading and writing Xbox FATX file systems"
license = "Apache-2.0"
repository = "https://github.com/rdmrocha/xtafkit"
build = "build.rs"

[dependencies]
thiserror = "2"
bitflags = "2"
time = "0.3"
log = "0.4"
libc = "0.2"
phf = "0.13"
hmac = "0.13"
sha1 = "0.11"
byteorder = "1.5"
num_enum = "0.7"
xdvdfs = { version = "0.8", default-features = false, features = ["std", "read", "write", "sync"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["fs", "ioctl"] }

[build-dependencies]
phf_codegen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
